[package]
name = "mega_mux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
battery = "0.7"
daemonize-me = "1.0.0"
heim = { version = "0.1.0-rc.1", features = [
    "cpu",
    "disk",
    "memory",
    "net",
    "host",
] }
humantime = "2"
keyring = "0.10"
log = "0.4"
mowl = "2"
mqtt-async-client = "0.3"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
syslog = "5"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
