[package]
name = "system-mqtt"
authors = ["James Carl"]
version = "0.2.1"
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Broadcasts system statistics to an mqtt server of your choice. Ideal for home assistant!"
repository = "https://github.com/IamTheCarl/system-mqtt"

[dependencies]
argh = "0.1"
battery = "0.7"
heim = { version = "0.1.0-rc.1", features = [
    "cpu",
    "disk",
    "memory",
    "net",
    "host",
] }
keyring = "0.10"
log = "0.4"
mowl = "2"
mqtt-async-client = "0.3"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = { version = "2.2", features = ["serde"] }

[package.metadata.deb]
systemd-units = { unit-name = "system-mqtt", unit-scripts = "systemd", enable = true }
